--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
   </div>
 
   <script>
+    // URL DO SEU WEB APP (ATUALIZADA!)
+    const URL = 'https://script.google.com/macros/s/AKfycbxreTNQhJvHtbECyk7oj3Oi5qzIIaG-bQmIjYJdXtDHQ38syCn52iOgzhscDSvjYlE_KA/exec';
+
     let fotos = [], lat = null, lng = null, gpsPronto = false;
     let placaAutorizada = false;
     let placaUsada = "";
@@ -109,7 +112,7 @@
 
       const dados = { acao: "verificarPlaca", placa };
 
-      fetch('https://script.google.com/macros/s/AKfycbw3zy9f7PWR9Zuhpuru0POb1lo5xsAOoman7WsZy2shmH-Jtt3tS38TpXn9uaVKVwXknQ/exec', {
+      fetch(URL, {
         method: 'POST',
         body: JSON.stringify(dados),
         headers: { 'Content-Type': 'application/json' }
@@ -272,7 +275,7 @@
             nome: `${nota}_${i+1}_${placaUsada}.jpg`,
             file: b
           };
-          fetch('https://script.google.com/macros/s/AKfycbw3zy9f7PWR9Zuhpuru0POb1lo5xsAOoman7WsZy2shmH-Jtt3tS38TpXn9uaVKVwXknQ/exec', {
+          fetch(URL, {
             method: 'POST',
             body: JSON.stringify(dados),
             headers: { 'Content-Type': 'application/json' }
